# rec-baseline

./: .gitignore  LICENSE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
cf_baseline/: common.py  metrics.py
cf_baseline/algos/: __init__.py  mf.py
cf_baseline/trainer/: base.py  mf.py
notebooks/: 00_movielens_mf.ipynb  01_dressipi_mf.ipynb  02_dressipi_gru4rec.ipynb  03_dressipi_smlp.ipynb  04_dressipi_bert4rec.ipynb
rec_baseline/: common.py  metrics.py
rec_baseline/algos/: __init__.py  base.py  bert.py  gru.py  mf.py  pcos.py  smlp.py
rec_baseline/trainer/: __init__.py  base.py  gru.py  mf.py
scripts/: download_movielens_dataset.py
tests/: test_metrics.py
