[tool.poetry]
name = "collaborative-filtering-baseline"
version = "0.1.0"
description = ""
authors = ["nutorbit <nutorbitx@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
torch = "<1.13"
numpy = "^1.23.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
