[tool.poetry]
name = "rec-baseline"
version = "0.1.0"
description = ""
authors = ["nutorbit <nutorbitx@gmail.com>"]
packages = [
    { include = "rec_baseline"},
]

[tool.poetry.dependencies]
python = "^3.8"
torch = "<1.14"
numpy = "^1.23.4"
jupyterlab = "^3.5.0"
pandas = "^1.5.1"
tqdm = "^4.64.1"
matplotlib = "^3.6.2"
pytest = "^7.2.1"
scikit-learn = "^1.2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
